# aoc23

./: .gitignore  CMakeLists.txt
day1/: CMakeLists.txt  day1.cpp  part2.cpp
day10/: part1.cpp  part2.cpp
day11/: part1.cpp  part2.cpp
day12/: part1.cpp  part2.cpp
day13/: part1.cpp  part2.cpp
day14/: part1.cpp  part2.cpp
day15/: part1.cpp  part2.cpp
day16/: part1.cpp  part2.cpp
day2/: CMakeLists.txt  day2.cpp  part2.cpp
day3/: CMakeLists.txt  part1.cpp  part2.cpp
day4/: CMakeLists.txt  day4.cpp  day4p2.cpp
day5/: CMakeLists.txt  day5p2.cpp  part1.cpp
day5/real-input/: fertilizer-to-water.txt  light-to-temperature.txt  seed-to-soil.txt  seeds.txt  soil-to-fertilizer.txt  temperature-to-humidity.txt  water-to-light.txt
day6/: CMakeLists.txt  part1.cpp
day7/: CMakeLists.txt  part1.cpp  part2.cpp
day8/: part1.cpp  part2.cpp
day9/: CMakeLists.txt  part1.cpp  part2.cpp
