set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_COPY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/day${DAY})

FILE(COPY input.txt DESTINATION "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")

add_executable(day${DAY}_part1 part1.cpp)
add_executable(day${DAY}_part2 part2.cpp)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_COPY})